@@ -85,6 +85,8 @@ public:
     static void CheckCvars(void);
 
     static void FlushRedirect(valueType *outputbuf);
+    static bool IsRconWhitelisted(netadr_t *from);
+    static void DropClientsByAddress(netadr_t *drop, pointer reason);
 
 private:
     static const sint IPUDP_HEADER_SIZE = 28;
